# stegano-web

./: .gitignore  Pipfile  README.rst  app.json  package-lock.json  package.json  pyproject.toml  requirements.txt  runserver.py
web/: __init__.py  views.py
web/static/css/: custom.css
web/templates/: index.html  layout.html
