[tool.poetry]
name = "stegano-web"
version = "0.1.0"
description = "Web application using the Python Stegano library."
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "AGPL-3.0-or-later"

packages = [
    {include = "web"}
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
Flask = "^3.0.0"
requests = "^2.32.0"
stegano = "^0.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
